--- a/g4/Class 1/ToDo/ToDo.ConsoleApp/ToDo.ConsoleApp.csproj
+++ b/g4/Class 1/ToDo/ToDo.ConsoleApp/ToDo.ConsoleApp.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ToDo.DataLayer\ToDo.DataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
