--- a/g4/Class 2/ToDo/ToDo.ConsoleApp/ToDo.ConsoleApp.csproj
+++ b/g4/Class 2/ToDo/ToDo.ConsoleApp/ToDo.ConsoleApp.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
   </ItemGroup>
 
