--- a/g2/Class5/SEDC.G2.DataDrive.Workshop.Data/SEDC.G2.DataDrive.Workshop.Data.csproj
+++ b/g2/Class5/SEDC.G2.DataDrive.Workshop.Data/SEDC.G2.DataDrive.Workshop.Data.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.60.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.60.6\lib\net451\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,9 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ICountryRepository.cs" />
+    <Compile Include="Interfaces\IDrinkOrderRepositpry.cs" />
+    <Compile Include="Interfaces\IDrinkRepository.cs" />
     <Compile Include="Interfaces\IDrinkTypeRepository.cs" />
+    <Compile Include="Interfaces\IEmployeeRepository.cs" />
+    <Compile Include="Interfaces\IManufacturerRepository.cs" />
+    <Compile Include="Interfaces\IOrderRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CountryRepository.cs" />
+    <Compile Include="Repositories\DrinkOrderRepository.cs" />
+    <Compile Include="Repositories\DrinkRepository.cs" />
     <Compile Include="Repositories\DrinkTypeRepository.cs" />
+    <Compile Include="Repositories\EmployeeRepository.cs" />
+    <Compile Include="Repositories\ManufacturerRepository.cs" />
+    <Compile Include="Repositories\OrderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SEDC.G2.DataDrive.Workshop.Data.Model\SEDC.G2.DataDrive.Workshop.Data.Model.csproj">
@@ -51,6 +66,8 @@
       <Name>SEDC.G2.DataDrive.Workshop.Data.Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
